# feynman-factory

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py  sessions.py
src/: __init__.py  bench.py  course.py  demo.py  llm.py  orchestrator.py  race.py  schemas.py  system_race.py
src/agents/: __init__.py  applet_builder.py  critic.py  doc_course.py  explainer_video.py  grader.py  planner.py  slide_deck.py  tutor.py
src/data/: __init__.py  build_seed.py  openstax.py  pdf_course.py  physics_eval.py
src/video/: __init__.py  hyperframes.py  runtime.py
tests/: test_gemma_4_31b.py
web/: index.html
