[project]
name = "lesson-factory"
version = "0.1.0"
description = "Multi-agent personalized physics lesson factory powered by Cerebras + Gemma 4 31B"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cerebras-cloud-sdk>=1.67.0",
    "python-dotenv>=1.2.2",
    "datasets>=2.19.0",
    "lxml>=5.2.0",
    "requests>=2.32.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.9",
    "pypdf>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
